# capi

./: .gitignore  CMakeLists.txt  README.md  beautify.sh
src/: .clang-tidy  Makefile  capi.c  capi.h  checkerror.c  checkerror.h  configure.h  debug.h  httpheaders.c  httpheaders.h  main.c  utils.c  utils.h
tests/: Makefile
